# hxgrep

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  debug_regex.rs  justfile  run_tests.sh  todo.md
.claude/: settings.local.json
src/: buffer_manager.rs  cli.rs  color_context.rs  config.rs  error.rs  forensic_image.rs  lib.rs  main.rs  multifile.rs  output.rs  parallel.rs  progress.rs  regex_processor.rs  stream.rs  structured_output.rs
tests/: concurrency_test.rs  debug_quantifier.rs  edge_case_test.rs  integration_test.rs  multifile_test.rs  parallel_test.rs  regex_quantifiers_test.rs  regex_syntax_test.rs  structured_output_test.rs  test_data_generator.rs
