[package]
name = "hxgrep"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
hex = "0.4"
rayon = "1.10"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
libc = "0.2"
exhume_body = { git = "https://github.com/forensicxlab/exhume_body", optional = true }
colored = "2.1"

[features]
default = ["exhume"]
exhume = ["exhume_body"]

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"

[package.metadata.scripts]
dev-test = "cargo test && cargo clippy"
pre-commit = "cargo fmt && cargo clippy && cargo test"
